--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,10 @@
 </head>
 <body>
   <script>
+    {{flutter_js}}
+
+    {{flutter_build_config}}
+
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.load({
